2003-01-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Fixed bug #109698 by making Home and End keys take you to the start/end of text within the current structural element, rather than the start/end of current line

	* cong-location.c

	Added references to bug #109698 where appropriate
	
	* plugin-website.c

	Disabled this plugin; it's too broken to be worth fixing (see Bugzilla #113001 for some of the problems)

	--- Version 0.7.9 ---

2003-01-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Provide STRING, TEXT and COMPOUND_TEXT in addition to UTF8_STRING as target atoms for text, finally allows pasting into XEmacs from Conglomerate on my machine

	* cong-app.c, cong-document.c

	Update PRIMARY when selection changes, fixing bug #130248 and #126039

	* cong-app.c, cong-document.c

	Reduced debug log spewage

	* cong-app.c

	Added references to the various Bugzilla bugs for the various FIXMEs to be deferred to the 1.0.0 milestone

	* cong-app.c

	Load and parse selection-handling stylesheet once, rather than every time a selection changes

	* cong-app.c, cong-app.h

	Big rewrite of selection handling: now attempts to intelligently offer and receive data in both text and XML formats, fixing bug #129731

2003-01-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, tree.c, xmledit.c

	Changed GConf path to be custom-dispspec-paths, and removed all of the installation paths from it, instead generating it at run-time as a fix for bug #129776; change to the clipboard setting API and lots of debug clipboard code as work towards fixing bug #129731

2004-01-02  Geert Stappers <stappers@stappers.nl>

	* cong-app.c
	enable GConf search again, we have to fix bug #129776 (missing
	@PKGDATADIR@) at the right place.

	* cong-dispspec-registry.c
	Tell which dispspecfile the warnings are about.

2003-12-30  David Malcolm <david@davemalcolm.demon.co.uk>
