@@ -1,5 +1,9 @@
 2003-01-06  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-plugin.c, cong-plugin.h, plugin-docbook.c
+
+	Added a wrapper function to generate generic property dialog descriptions to reduce translator workload (fixes bug #124780)
+
 	* cong-location.c
 
 	Fixed bug #109698 by making Home and End keys take you to the start/end of text within the current structural element, rather than the start/end of current line
